Created OAuth2UserWrapper class, added JWT dependencies, modified CustomOAuth2UserService