@@ -1,6 +1,7 @@
 package com.laa66.statlyapp.oauth2;
 
 import com.laa66.statlyapp.DTO.UserDTO;
+import com.laa66.statlyapp.model.OAuth2UserWrapper;
 import com.laa66.statlyapp.service.UserService;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -8,7 +9,6 @@ import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.security.oauth2.core.user.DefaultOAuth2User;
-import org.springframework.security.oauth2.core.user.OAuth2User;
 import org.springframework.security.oauth2.core.user.OAuth2UserAuthority;
 
 import java.util.Collections;
@@ -33,46 +33,50 @@ class CustomOAuth2UserServiceUnitTest {
     @Test
     void shouldGetUser() {
         UserDTO userDTO = new UserDTO("1", null, null, null, List.of(), 0);
-        OAuth2User oAuth2User = new DefaultOAuth2User(
-                Collections.singletonList(new OAuth2UserAuthority(Map.of("user","user"))),
-                Map.of(
-                        "display_name", "user", "email", "test@mail.com",
-                        "images", List.of(), "id", "id"),
-                "display_name"
-                );
+        OAuth2UserWrapper oAuth2User = new OAuth2UserWrapper(
+                new DefaultOAuth2User(
+                        Collections.singletonList(new OAuth2UserAuthority(Map.of("user","user"))),
+                        Map.of(
+                                "display_name", "user", "email", "test@mail.com",
+                                "images", List.of(), "id", "id"),
+                        "display_name"
+                )
+        );
         when(userService.findUserByEmail("test@mail.com")).thenReturn(userDTO);
-        OAuth2User result = customOAuth2UserService.getUserOrCreate(oAuth2User);
+        OAuth2UserWrapper result = (OAuth2UserWrapper) customOAuth2UserService.getUserOrCreate(oAuth2User);
         assertNotNull(result);
         assertEquals(oAuth2User.getAuthorities(), result.getAuthorities());
-        assertEquals(oAuth2User.getAttributes().get("email"), result.getAttributes().get("email"));
-        assertEquals(1L, result.getAttributes().get("userId"));
-        assertEquals(oAuth2User.getAttributes().get("display_name"), result.getAttributes().get("display_name"));
+        assertEquals(oAuth2User.getEmail(), result.getEmail());
+        assertEquals(1L, result.getUserId());
+        assertEquals(oAuth2User.getDisplayName(), result.getDisplayName());
     }
 
     @Test
     void shouldCreateUser() {
         UserDTO userDTO = new UserDTO("1", null, null, null, List.of(), 0);
-        OAuth2User oAuth2User = new DefaultOAuth2User(
-                Collections.singletonList(new OAuth2UserAuthority(Map.of("user","user"))),
-                Map.of(
-                        "display_name", "user", "email", "test@mail.com",
-                        "images", List.of(
-                                Map.of("url", "imageUrl", "height", 200, "width", 200),
-                                Map.of("url", "imageUrlSmaller", "height", 150, "width", 150)
-                        ), "id", "id"),
-                "display_name"
-                );
+        OAuth2UserWrapper oAuth2User = new OAuth2UserWrapper(
+                new DefaultOAuth2User(
+                        Collections.singletonList(new OAuth2UserAuthority(Map.of("user","user"))),
+                        Map.of(
+                                "display_name", "user", "email", "test@mail.com",
+                                "images", List.of(
+                                        Map.of("url", "imageUrl", "height", 200, "width", 200),
+                                        Map.of("url", "imageUrlSmaller", "height", 150, "width", 150)
+                                ), "id", "id"),
+                        "display_name"
+                )
+        );
         when(userService.findUserByEmail("test@mail.com")).thenReturn(null);
         when(userService.saveUser(argThat(arg -> arg
                 .getImage()
                 .equalsIgnoreCase("imageUrl"))))
                 .thenReturn(userDTO);
-        OAuth2User result = customOAuth2UserService.getUserOrCreate(oAuth2User);
+        OAuth2UserWrapper result = (OAuth2UserWrapper) customOAuth2UserService.getUserOrCreate(oAuth2User);
         assertNotNull(result);
         assertEquals(oAuth2User.getAuthorities(), result.getAuthorities());
-        assertEquals(oAuth2User.getAttributes().get("email"), result.getAttributes().get("email"));
-        assertEquals(1L, result.getAttributes().get("userId"));
-        assertEquals(oAuth2User.getAttributes().get("display_name"), result.getAttributes().get("display_name"));
+        assertEquals(oAuth2User.getEmail(), result.getEmail());
+        assertEquals(1L, result.getUserId());
+        assertEquals(oAuth2User.getDisplayName(), result.getDisplayName());
     }
 
 }
